TestCases/LLVMTests/SyntaxErrorTests/tests/test31.c
int main(){
    // nested functions are stopped by the grammar
    int foo(){
        return 0;
    }
    return 0;
}